# claude-personal-framework

./: .claude-fw.lock.json  .claude-fw.yaml  .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/agents/: hexagonal-architect.md
.github/workflows/: ci.yml
agents/: hexagonal-architect.md  hexagonal-refactor-nestjs.md  hexagonal-test-reviewer.md  plane-pm.md  pr-creator.md
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: catalog-detection.md  roadmap.md
docs/adr/: 0001-pr-creator-provider-coupling.md  0002-node-crypto-in-domain.md  0003-multi-source-catalog-migration.md  0004-catalog-sources-as-composition-concern.md  0005-report-dtos-cli-as-source-of-truth.md  (+3 more)
git-hooks/: commit-msg  pre-commit  pre-push
presets/: base.yaml  laravel.yaml  nestjs.yaml  react-native.yaml  tauri-rust-react.yaml  vue.yaml
skills/: commit-style.md  framer-motion-patterns.md  hexagonal-testing-strategy.md  laravel-hexagonal-patterns.md  laravel-testing-rules.md  nestjs-hexagonal-patterns.md  php-hexagonal-rules.md  pinia-patterns.md  plane-conventions.md  react-hexagonal-patterns.md  react-native-patterns.md  react-native-testing-rules.md  rust-hexagonal-rules.md  tauri-patterns.md  typescript-hexagonal-rules.md  vue-hexagonal-patterns.md  vue-testing-rules.md  zustand-patterns.md
(+50 files in other folders)
