[package]
name = "claude-fw-desktop"
version = "0.0.0"
description = "Desktop app for the Claude personal framework"
authors = ["Angel Martinez"]
edition = "2021"

[lib]
name = "claude_fw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
